--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,3 +10,6 @@ dependencies = [
     "starlette>=0.46.1",
     "uvicorn>=0.34.0",
 ]
+
+[project.scripts]
+sequential-think-server = "sequential_think_server:main"
